-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.0-rc1
-
Windows 7 64 bit
-
b9063569dbe3b82ef4ab531d9e18e4bbb500d5a8
In the "Window" menu, there's an item without any text. This seems to be the one for QtCreator.ToggleFullScreen:
For Gerrit Dashboard: QTCREATORBUG-12684 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
90026,2 | Fix vanished fullscreen menu item text on non-OSX | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |