Fix vanished fullscreen menu item text on non-OSX

Broke when removing old OS X 10.6 code paths.

Task-number: QTCREATORBUG-12684
Change-Id: I95dea42d40d2f343476cea0eba44bc2a293a422d
Reviewed-by: Robert Loehning <robert.loehning@digia.com>